--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -96,5 +96,17 @@
         app:layout_constraintTop_toBottomOf="@+id/logKayit"
         app:layout_constraintVertical_bias="0.068" />
 
+    <TextView
+        android:id="@+id/tvPassw"
+        android:layout_width="105dp"
+        android:layout_height="41dp"
+        android:text="Parolamı Sıfırla"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.872"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
+        app:layout_constraintVertical_bias="0.149" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
