--- a/app/src/main/res/layout/fragment_passw.xml
+++ b/app/src/main/res/layout/fragment_passw.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#673AB7"
-    tools:context=".PasswFragment">
+    tools:context=".dialogs.PasswFragment">
 
     <TextView
         android:id="@+id/titlePassw"
