--- a/app/src/main/res/menu/optmenu.xml
+++ b/app/src/main/res/menu/optmenu.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/optmenu" android:title="options"
         android:icon="@drawable/ic_baseline_exit_to_app_24"
-        app:showAsAction="always">
-
-    </item>
+        app:showAsAction="always"></item>
     <item android:id="@+id/account" android:title="Hesap Ayarları"></item>
+    <item android:id="@+id/menuChat" android:title="Sohbet Odası"></item>
+
 </menu>
